CDPD-73054: [ui-storageBrowser] Fix height layout issues in storage browser (#3813)
(cherry picked from commit ce08dccb5b5002f81df93201ed7a060654235be3)
(cherry picked from commit a6b1f5eea294f4966d22807996bd08ee1f843db7)

--- a/desktop/core/src/desktop/js/apps/storageBrowser/StorageBrowserPage/StorageBrowserTable/StorageBrowserTable.scss
+++ b/desktop/core/src/desktop/js/apps/storageBrowser/StorageBrowserPage/StorageBrowserTable/StorageBrowserTable.scss
@@ -30,6 +30,10 @@ $icon-margin: 5px;
 
   .hue-storage-browser__search {
     width: 30%;
+
+    .ant-input {
+      box-shadow: none;
+    }
   }
 
   .hue-storage-browser__actions-bar-right {
